# app/Http/Controllers/AuthController.php
@@ -11,6 +11,41 @@ use Illuminate\Support\Facades\Hash;
 class AuthController extends Controller
 {
 
+    /**
+ * Get a JWT via given credentials.
+ *
+ * @OA\Post(
+ *     path="/register",
+ *     tags={"UserAuth"},
+ *     summary="Register API's",
+ *     @OA\RequestBody(
+ *          description= "- Register to your account",
+ *          required=true,
+ *          @OA\JsonContent(
+ *              type="object",
+ *              @OA\Property(property="name", type="string"),
+ *              @OA\Property(property="email", type="email"),
+ *              @OA\Property(property="password", type="password"),
+ *              @OA\Property(property="password_confirmation", type="password")
+ *          )
+ *     ),
+ *     @OA\Response(
+ *         response=200,
+ *         description="Succesfully Login",
+ *      ),
+ *     @OA\Response(
+ *         response=201,
+ *         description="Succesfully Login",
+ *      ),
+ *      @OA\Response(
+ *         response=419,
+ *         description="Unauthorhized",
+ *      ),
+ *    )
+ *
+ * @return \Illuminate\Http\JsonResponse
+ */
+
     public function register(Request $request) {
         $fields = $request->validate([
             'name' => 'required|string',
@@ -33,6 +68,41 @@ class AuthController extends Controller
 
         return response($response, 201);
     }
+
+    
+        /**
+ * Get a JWT via given credentials.
+ *
+ * @OA\Post(
+ *     path="/login",
+ *     tags={"UserAuth"},
+ *     summary="Login API's",
+ *     @OA\RequestBody(
+ *          description= "- Login to add products",
+ *          required=true,
+ *          @OA\JsonContent(
+ *              type="object",
+ *              required={"email","password"},
+ *              @OA\Property(property="email", type="email"),
+ *              @OA\Property(property="password", type="password"),
+ *          )
+ *     ),
+ *     @OA\Response(
+ *         response=200,
+ *         description="Succesfully Login",
+ *      ),
+ *     @OA\Response(
+ *         response=201,
+ *         description="Succesfully Login",
+ *      ),
+ *      @OA\Response(
+ *         response=419,
+ *         description="Unauthorhized",
+ *      ),
+ *    )
+ *
+ * @return \Illuminate\Http\JsonResponse
+ */
 
     public function login(Request $request) {
         $fields = $request->validate([
